--- a/html/mapa.html
+++ b/html/mapa.html
@@ -46,9 +46,7 @@
 
         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/html/detalhado.html">DETALHADO APAGAR DEPOIS</a>
-                </li>
+
                 <li class="nav-item active">
                     <a class="nav-link" href="/html/detalhado.html?pagina=saude">
                         <i class="fas fa-medkit"></i> Saúde
@@ -79,9 +77,9 @@
     <div class="container mt-5">
 
         <h1 class="d-flex justify-content-center">Bem vindo</h1>
-        <h2>Quer saber onde ficam os melhores lugares? Venha comigo.</h2>
+        <h2>Pontos Importantes do ES</h2>
         <form class="form-inline my-2 my-lg-0 d-flex justify-content-center mt-5">
-            <input class="form-control mr-4" type="search" placeholder="Procurar html/detalhado.html?pagina=municipio" name="procLugar"
+            <input class="form-control mr-4" type="search" placeholder="Procurar municipio" name="procLugar"
                 aria-label="Search">
 
             <button class="btn btn-outline-danger my-2 my-sm-0 col-2" type="submit">Procurar</button>
